--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 ---
 layout: default
-title: Appccelerate
+title: Home
 ---
+
+	<h2 class="slogan align-center">Accelerates your .Net Application development<br />
+	Based upon real world experience.</h2>
