Project carousel shows latest accelerators

--- a/index.html
+++ b/index.html
@@ -5,3 +5,41 @@ title: Home
 
 	<h2 class="slogan align-center">Accelerates your .Net Application development<br />
 	Based upon real world experience.</h2>
+	
+	<h6 class="section-title">Latest accelerators</h6>
+
+	<ul class="projects-carousel clearfix">
+
+		<li>
+			<a href="">
+				<img src="img/placeholders/portfolio-project-4th-1.jpg" alt="">
+				<h5 class="title">Bootstrapper</h5>
+				<span class="categories">Boostrapper</span>
+			</a>
+		</li>
+
+		<li>
+			<a href="">
+				<img src="img/placeholders/portfolio-project-4th-2.jpg" alt="">
+				<h5 class="title">Distributed Event Broker</h5>
+				<span class="categories">Event Broker</span>
+			</a>
+		</li>
+
+		<li>
+			<a href="">
+				<img src="img/placeholders/portfolio-project-4th-3.jpg" alt="">
+				<h5 class="title">Mapping Event Broker</h5>
+				<span class="categories">Event Broker</span>
+			</a>
+		</li>
+
+		<li>
+			<a href="">
+				<img src="img/placeholders/portfolio-project-4th-4.jpg" alt="">
+				<h5 class="title">Evaluation Engine</h5>
+				<span class="categories">Evalution Engine</span>
+			</a>
+		</li>
+
+	</ul><!-- end .projects-carousel -->
