--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ title: Home
 			</a>
 		</li>
 
-		<li>
-			<a href="">
-				<img src="img/placeholders/portfolio-project-4th-2.jpg" alt="">
-				<h5 class="title">Distributed Event Broker</h5>
+        <li>
+			<a href="eventbroker.html">
+				<img src="img/eventbroker_220_140.png" alt="">
+				<h5 class="title">Event Broker</h5>
 				<span class="categories">Event Broker</span>
 			</a>
 		</li>
@@ -29,6 +29,14 @@ title: Home
 		<li>
 			<a href="">
 				<img src="img/placeholders/portfolio-project-4th-3.jpg" alt="">
+				<h5 class="title">Distributed Event Broker</h5>
+				<span class="categories">Event Broker</span>
+			</a>
+		</li>
+
+		<li>
+			<a href="">
+				<img src="img/placeholders/portfolio-project-4th-4.jpg" alt="">
 				<h5 class="title">Mapping Event Broker</h5>
 				<span class="categories">Event Broker</span>
 			</a>
