updated team page

--- a/team.html
+++ b/team.html
@@ -4,11 +4,11 @@ title: Home
 ---
 	<header class="page-header">
 
-		<h1 class="page-title align-left">See who accelerates</h1>
+		<h1 class="page-title align-left">See who appccelerates</h1>
 
 		<hr />
 
-		<h2 class="page-subdescription"><strong>Highly motivated team </strong> which will not stop to accelerate.</h2>
+		<h2 class="page-subdescription"><strong>Highly motivated team </strong> which will not stop to appccelerate.</h2>
 		
 	</header><!-- end .page-header -->
 {% for member in site.members %}		
