added documentation for state machine

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@ title: Home
 				<span class="categories">Event Broker</span>
 			</a>
 		</li>
+		
+		<li>
+			<a href="statemachine.html">
+				<img src="img/statemachine_220_140.png" alt="">
+				<h5 class="title">State Machine</h5>
+				<span class="categories">State Machine</span>
+			</a>
+		</li>
 
 		<li>
 			<a href="">
