added evaluationengine overview

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ title: Home
 		</li>
 
 		<li>
-			<a href="">
-				<img src="img/placeholders/portfolio-project-4th-4.jpg" alt="">
+			<a href="evaluationengine.html">
+				<img src="img/evaluationengine_220_140.png" alt="">
 				<h5 class="title">Evaluation Engine</h5>
 				<span class="categories">Evalution Engine</span>
 			</a>
