added evaluation engine tutorial

--- a/evaluationengine.html
+++ b/evaluationengine.html
@@ -20,13 +20,11 @@ navigation:
    - name: Validation
      link: evaluationenginevalidation.html
    - name: Logging
-     link: eventbrokerlogging.html
-   - name: Testability
-     link: eventbrokertestability.html
+     link: evaluationenginelogging.html
    - name: Tips and Tricks
-     link: eventbrokertipsandtricks.html
+     link: evaluationenginetipsandtricks.html
    - name: Specifications
-     link: eventbrokerspecifications.html		 
+     link: evaluationenginespecifications.html		 
 ---
 <h2>Motivation</h2>
 <p>
