--- a/bootstrappersyntax.html
+++ b/bootstrappersyntax.html
@@ -5,6 +5,8 @@ teaser: Accelerates your application bootstrapping mechanism
 navigation:
    - name: Tutorial
      link: bootstrappertutorial.html	
+   - name: Configuration Sections
+     link: bootstrapperconfigurationsections.html		 
    - name: Syntax
      link: bootstrappersyntax.html		 
    - name: Tips and Tricks
