--- a/documentation.html
+++ b/documentation.html
@@ -1,12 +1,16 @@
 --- 
-layout: documentation 
+layout: default
 title: Documentation 
-teaser: Accelerate your .net application development
-navigation:
-   - name: Documentation
-     link: documentation.html
 ---
-<h2>Appccelerate</h2>
+	<header class="page-header">
+
+		<h1 class="page-title align-left">Documentation</h1>
+
+		<hr />
+
+		<h2 class="page-subdescription">It is designed well if it can be removed easily.</h2>
+		
+	</header><!-- end .page-header -->
 <p>
 All components provided by Appccelerate were design in a way so that your code will be loosly coupled, easy to test and easy to extend and maintain.
 </p>
