--- a/index2.html
+++ b/index2.html
@@ -27,9 +27,8 @@
 		<link rel="stylesheet" href="//universal-ie6-css.googlecode.com/files/ie6.1.1.css" media="screen, projection">
 	<![endif]-->
 
-	<!--[if lt IE 9]>
-		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+	<!-- HTML5 Shiv + detect touch events -->
+	<script src="js/modernizr.custom.js"></script>
 </head>
 <body>
 
@@ -59,6 +58,7 @@
 						</ul>
 					</li>
 					<li><a href="elements.html">Elements</a></li>
+					<li><a href="pricing-tables.html">Pricing Tables</a></li>
 					<li><a href="columns.html">Columns</a></li>
 					<li><a href="#">Third Level Item</a>
 						<ul>
@@ -525,6 +525,7 @@
 	<script src="js/mediaelement-and-player.min.js"></script>
 	<script src="//maps.google.com/maps/api/js?sensor=false"></script>
 	<script src="js/jquery.gmap.min.js"></script>
+	<script src="js/jquery.touchSwipe-1.2.5.min.js"></script>
 	<script src="js/custom.js"></script>
 <!--<![endif]-->
 </body>
