Further moved out documentation of bootstrapper into subpages

--- a/bootstrapper.html
+++ b/bootstrapper.html
@@ -1,18 +1,20 @@
 --- 
 layout: documentation 
 title: Bootstrapper 
-teaser: Accelerates your application bootstrapping mechanism
+teaser: Appccelerates your application bootstrapping mechanism
 navigation:
    - name: Tutorial
-     link: bootstrappertutorial.html	
+     link: bootstrappertutorial.html	 
    - name: Configuration Sections
      link: bootstrapperconfigurationsections.html		 
    - name: Syntax
-     link: bootstrappersyntax.html		 
-   - name: Tips and Tricks
-     link: bootstrappertipsandtricks.html		
+     link: bootstrappersyntax.html		
+   - name: Customization
+     link: bootstrappercustomizations.html		
    - name: Reports
      link: bootstrapperreports.html		
+   - name: Tips and Tricks
+     link: bootstrappertipsandtricks.html		 
    - name: Specifications
      link: bootstrapperspecifications.html		 
 ---
