Reactivated legal notice, corrected address for donator

--- a/donators.html
+++ b/donators.html
@@ -2,3 +2,29 @@
 layout: default
 title: Donators
 ---
+	<div class="container clearfix">
+
+		<header class="page-header">
+		
+			<h1 class="page-title">Without our donators, appcceleration would decelerate.</h1>
+			
+		</header><!-- end .page-header -->
+
+	</div><!-- end .container -->
+
+	<section id="map">
+		<p class="container">Something went wrong... Try to enable your JavaScript!</p>
+	</section><!-- end #map -->
+
+	<div class="container clearfix">
+			<h3>Contact Info</h3>
+			<p>bbv Software Services Ag<br/>
+			Blumenrain 10, 6002 Luzern<br/>
+			Switzerland</p>
+
+				<p>Phone: +41 41 429 01 11<br/>
+				Email: info + at + bbv.ch<br/>
+				Web: <a href="http://www.bbv.ch">bbv.ch</a></p>
+		
+		
+	</div><!-- end .container -->
