Added distributed event broker scoping and identification

--- a/distributedeventbroker.html
+++ b/distributedeventbroker.html
@@ -6,7 +6,9 @@ navigation:
    - name: Tutorial
      link: distributedeventbrokertutorial.html	 
    - name: Transports
-     link: distributedeventbrokertransports.html	 		 
+     link: distributedeventbrokertransports.html	 
+   - name: Scoping &amp; Identification
+     link: distributedeventbrokerscoping.html	 		 
 ---
 		<h2>Features</h2>
 		<ul>
