--- a/distributedeventbrokertutorial.html
+++ b/distributedeventbrokertutorial.html
@@ -6,7 +6,9 @@ navigation:
    - name: Tutorial
      link: distributedeventbrokertutorial.html	 
    - name: Transports
-     link: distributedeventbrokertransports.html	 		 
+     link: distributedeventbrokertransports.html	 
+   - name: Scoping &amp; Identification
+     link: distributedeventbrokerscoping.html	 		 
 ---
 	<h2>Setup of the distributed event broker</h2>
 	<p>The usage of the distributed event broker is astonishingly simple when you have prepared your transport layer. Basically it is only two lines of code. </p>
