--- a/distributedeventbrokertransports.html
+++ b/distributedeventbrokertransports.html
@@ -6,7 +6,9 @@ navigation:
    - name: Tutorial
      link: distributedeventbrokertutorial.html	 
    - name: Transports
-     link: distributedeventbrokertransports.html	 		 
+     link: distributedeventbrokertransports.html	 
+   - name: Scoping &amp; Identification
+     link: distributedeventbrokerscoping.html	 		 
 ---
 <h2>Transport layers</h2>
 <p>The sections below are not meant to serve as an introduction into the specific transport layers. For transport layer specific setup, read the documentation pages provided by the project owners. </p>
