Added distributed event broker restrictions

--- a/distributedeventbrokerscoping.html
+++ b/distributedeventbrokerscoping.html
@@ -8,7 +8,11 @@ navigation:
    - name: Transports
      link: distributedeventbrokertransports.html	 
    - name: Scoping &amp; Identification
-     link: distributedeventbrokerscoping.html	 		 
+     link: distributedeventbrokerscoping.html	 	
+   - name: Customization
+     link: distributedeventbrokercustomization.html	 	 
+   - name: Restrictions
+     link: distributedeventbrokerrestrictions.html	 		 
 ---
 <h2>Scoping &amp; Identification</h2>
 <h3>Distributed Event Broker Identification</h3>
