--- a/distributedeventbrokertransports.html
+++ b/distributedeventbrokertransports.html
@@ -8,7 +8,11 @@ navigation:
    - name: Transports
      link: distributedeventbrokertransports.html	 
    - name: Scoping &amp; Identification
-     link: distributedeventbrokerscoping.html	 		 
+     link: distributedeventbrokerscoping.html	 	
+   - name: Customization
+     link: distributedeventbrokercustomization.html	 	 
+   - name: Restrictions
+     link: distributedeventbrokerrestrictions.html	 		 
 ---
 <h2>Transport layers</h2>
 <p>The sections below are not meant to serve as an introduction into the specific transport layers. For transport layer specific setup, read the documentation pages provided by the project owners. </p>
