--- a/distributedeventbrokertutorial.html
+++ b/distributedeventbrokertutorial.html
@@ -8,7 +8,11 @@ navigation:
    - name: Transports
      link: distributedeventbrokertransports.html	 
    - name: Scoping &amp; Identification
-     link: distributedeventbrokerscoping.html	 		 
+     link: distributedeventbrokerscoping.html	 	
+   - name: Customization
+     link: distributedeventbrokercustomization.html	 	 
+   - name: Restrictions
+     link: distributedeventbrokerrestrictions.html	 		 
 ---
 	<h2>Setup of the distributed event broker</h2>
 	<p>The usage of the distributed event broker is astonishingly simple when you have prepared your transport layer. Basically it is only two lines of code. </p>
